Add find percentage functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<button data-change-sign class="btn grey">
 			<sup>+</sup>&#8260;<sub>&#8722;</sub>
 		</button>
-		<button data-operation class="btn grey">%</button>
+		<button data-percent class="btn grey">%</button>
 		<button data-operation class="btn orange">÷</button>
 		<button data-number class="btn">7</button>
 		<button data-number class="btn">8</button>
